==> Skptak/FreeRTOS/FreeRTOS/Demo/CORTEX_STM32F103_Keil/ParTest/ParTest.c <==
/*
 * FreeRTOS V202212.00
 * Copyright (C) 2020 Amazon.com, Inc. or its affiliates. All Rights Reserved.
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy of
 * this software and associated documentation files (the "Software"), to deal in
 * the Software without restriction, including without limitation the rights to
 * use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
 * the Software, and to permit persons to whom the Software is furnished to do so,
 * subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
 * FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
 * COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
 * IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 * CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 *
 * https://www.FreeRTOS.org
 * https://github.com/FreeRTOS
 *
 */

/*-----------------------------------------------------------
 * Simple parallel port IO routines.
 *-----------------------------------------------------------*/

/* FreeRTOS.org includes. */
#include "FreeRTOS.h"
#include "task.h"
#include "partest.h"

/* Library includes. */
#include "stm32f10x_lib.h"

#define partstMAX_OUTPUT_LED    ( 4 )
#define partstFIRST_LED         GPIO_Pin_6

static unsigned short usOutputValue = 0;

/*-----------------------------------------------------------*/

void vParTestInitialise( void )
{
    GPIO_InitTypeDef GPIO_InitStructure;

    /* Configure PC.06, PC.07, PC.08 and PC.09 as output push-pull */
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_6 | GPIO_Pin_7 | GPIO_Pin_8 | GPIO_Pin_9;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init( GPIOC, &GPIO_InitStructure );
}
/*-----------------------------------------------------------*/

void vParTestSetLED( unsigned portBASE_TYPE uxLED,
                     signed portBASE_TYPE xValue )
{
    unsigned short usBit;

    vTaskSuspendAll();
    {
        if( uxLED < partstMAX_OUTPUT_LED )
        {
            usBit = partstFIRST_LED << uxLED;

            if( xValue == pdFALSE )
            {
                usBit ^= ( unsigned short ) 0xffff;
                usOutputValue &= usBit;
            }
            else
            {
                usOutputValue |= usBit;
            }

            GPIO_Write( GPIOC, usOutputValue );
        }
    }
    xTaskResumeAll();
}
/*-----------------------------------------------------------*/

void vParTestToggleLED( unsigned portBASE_TYPE uxLED )
{
    unsigned short usBit;

    vTaskSuspendAll();
    {
        if( uxLED < partstMAX_OUTPUT_LED )
        {
            usBit = partstFIRST_LED << uxLED;

            if( usOutputValue & usBit )
            {
                usOutputValue &= ~usBit;
            }
            else
            {
                usOutputValue |= usBit;
            }

            GPIO_Write( GPIOC, usOutputValue );
        }
    }
    xTaskResumeAll();
}
/*-----------------------------------------------------------*/
